<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <TextView
            android:layout_width="wrap_content"
            android:text="We can grow if we are to-gether"
            android:layout_marginLeft="90dp"

            android:layout_height="wrap_content" />
        <TextView
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/About_us"

            android:textSize="30dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/title"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:textSize="15dp"
            android:layout_height="wrap_content"
            android:text="@string/title1"/>

        <TextView
            android:layout_marginTop="10dp"

            android:layout_width="match_parent"
            android:textSize="15dp"
            android:layout_height="wrap_content"
            android:text="@string/title2"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/title3"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/title4"/>

    </LinearLayout>

</ScrollView>