<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/margin_x"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="@dimen/margin_x"
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/margin_x2"
        android:layout_marginLeft="@dimen/margin_x2"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="162dp"
            android:src="@drawable/img1" />
        <TextView
            android:layout_width="wrap_content"
            android:text="We can grow if we are to-gether"
            android:layout_marginLeft="90dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_margin="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/About_us"
            android:textSize="30dp"
            android:textStyle="bold" />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:textSize="13dp"
            android:layout_height="wrap_content"
            android:text="@string/title"/>

        <TextView

            android:autoSizeTextType="uniform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:text="@string/title1"
            android:textSize="13dp" />

        <TextView

            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:textSize="13dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"            android:layout_height="wrap_content"
            android:text="@string/title2"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:textSize="13dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"            android:layout_height="wrap_content"
            android:text="@string/title3"/>
    </LinearLayout>
</ScrollView>